--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore sensitive environment config.
-.env
+/.env
+/config/database.yml
 
 # Ignore bundler config.
 /.bundle
